<resources>
  <string name="app_name">Flash Chat</string>

  <string name="prompt_username">Username</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="prompt_repassword">Confirm Password</string>
  <string name="prompt_message">Type a message</string>
  <string name="action_login">Login</string>
  <string name="action_signup">Signup</string>
  <string name="action_register">Register</string>
  <string name="action_log_or_reg">Log in or register</string>
  <string name="action_send">Send</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">Password too short or does not match</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
  <string name="sample_message">Hello!</string>
</resources>
