<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:background="@drawable/background_register"
  tools:context="edu.example.af_flash_chat.SignupActivity"
  android:gravity="top">

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@color/white">

    <AutoCompleteTextView
      android:id="@+id/atvUsername"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="25sp"
      android:hint="@string/prompt_username"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:inputType="textNoSuggestions"
      android:maxLines="1"
      android:textIsSelectable="false"
      android:textStyle="bold"

      android:imeOptions="actionNext"
    />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@color/white">

    <AutoCompleteTextView
      android:id="@+id/atvEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/prompt_email"
      android:textColor="@color/white"
      android:textSize="25sp"
      android:textColorHint="@color/white"
      android:inputType="textEmailAddress"
      android:maxLines="1"
      android:textIsSelectable="false"
      android:textStyle="bold"

      android:imeOptions="actionNext"
    />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@color/white">

    <EditText
      android:id="@+id/etPassword"
      android:textSize="25sp"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/prompt_password"
      android:inputType="textPassword"
      android:maxLines="1"
      android:textStyle="bold"

      android:imeOptions="actionNext"
    />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@color/white">

    <EditText
      android:id="@+id/etRepassword"
      android:textColor="@color/white"
      android:textSize="25sp"
      android:textColorHint="@color/white"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/prompt_repassword"
      android:inputType="textPassword"
      android:maxLines="1"
      android:textStyle="bold"

      android:imeActionId="@+id/register_form_finished"
      android:imeActionLabel="@string/action_signup"
      android:imeOptions="actionUnspecified"
    />

  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/btnRegister"
    style="?android:textAppearanceMedium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@color/white"
    android:text="@string/action_register"
    android:textColor="@color/green"
    android:textStyle="bold"

    android:onClick="onClickRegisterUser"
  />

</LinearLayout>