<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:background="@drawable/background_welcome_min"
  tools:context="edu.example.af_flash_chat.LoginActivity"
  android:gravity="bottom">

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@color/white">

    <AutoCompleteTextView
      android:id="@+id/atvEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/prompt_email"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:inputType="textEmailAddress"
      android:maxLines="1"
      android:textIsSelectable="false"

      android:imeOptions="actionNext"
    />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@color/white">

    <EditText
      android:id="@+id/etPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/prompt_password"
      android:imeActionId="@+id/login_form_completed"
      android:imeActionLabel="@string/action_signup"
      android:imeOptions="actionUnspecified"
      android:inputType="textPassword"

      android:maxLines="1"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      />

  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/btnLogin"
    style="?android:textAppearanceMedium"
    android:background="@color/green"
    android:textColor="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/action_login"
    android:textStyle="bold"

    android:onClick="onClickLoginUser"
  />

  <Button
    android:id="@+id/btnSignup"
    style="?android:textAppearanceMedium"
    android:background="@color/white"
    android:textColor="@color/green"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/action_signup"
    android:textStyle="bold"

    android:onClick="onClickSignupUser"
  />

</LinearLayout>